--- a/normalize.css
+++ b/normalize.css
@@ -419,6 +419,13 @@ textarea {
     font: inherit; /* 2 */
 }
 
+input[type="text"],
+input[type="search"],
+input[type="email"],
+input[type="password"],
+textarea.materialize-textarea{
+    padding:1px;
+}
 
 .fl{float:left;}
 .fr{float:right;}
